# starro-python

./: .bandit  .flake8  .gitignore  .sonarcloud.properties  LICENSE  MANIFEST.in  Makefile  README.md  coverage.xml  pyproject.toml  results.xml  scripts.py  sonar-project.properties
.github/workflows/: python-publish.yml
examples/: demo_class_usage.py
starro/: starro.py  test_starro.py
