[tool.poetry]
name = "starro"
description = "The package objective is to mischaracterize sensitive data from this through blinding masks using asterisk"
version = "1.0.10"
authors = ["Marcos Borges <contato@marcosborges.com>"]
readme = "README.md"
homepage = "https://github.com/marcosborges/starro-python"
repository = "https://github.com/marcosborges/starro-python"
documentation = "https://github.com/marcosborges/starro-python"
keywords = ["secury"]
classifiers = [
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: Text Processing :: Filters",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities"
]


[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"
pylint = "^2.7.2"
bandit = "^1.7.0"
flake8 = "^3.9.0"
dependency-check = "^0.5.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
test = 'scripts:test'
coverage = 'scripts:coverage'
lint = 'scripts:lint'
security = 'scripts:security'